forms and tables

--- a/index.html
+++ b/index.html
@@ -64,6 +64,36 @@
 <img src='image/animals/squirrel.jpg' width="25%">
 
 <a href="about.html">About Us</a>  <!-- anchor tag/link -->
+
+<br><br>
+
+<form enctype="multipart/form-data">
+    First Name:
+    <input type="text">
+    <input type="button" value="Button">
+    <input type="checkbox" >
+    <input type="color" >
+    <input type="date" >
+    number <input type="number" >
+    file <input type="file" >
+    password <input type="password" >
+    <input type="submit" value="Submit">
+</form>
+
+<br><br>
+
+  <form action="submitted_form.html" method="POST" > 
+   
+    <input type="text" name="firstname" id="firstname" placeholder="First Name">
+   <input type="text" name="lastname" id="lastname" placeholder="Last Name">
+    <input type="submit" value="Submit" name="submit">
+
+  </form>
+
+
+
+  
+
 </body>
 <footer>
 </footer>
