--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Title of the document</title>
+    <title>Title of the document</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
-<body bgcolor='#d8efc9'>
+<body>
+<div class="nav">
+    <div class="row">
+        <div class="column">
+            <img src="assets/images/logo.png" class="logo">
+        </div>
+        <div class="column padding-top">
+            <center>
+                <a href="" class="nav-buttons">Home</a>
+                <a href="" class="nav-buttons">About Us</a>
+                <a href="" class="nav-buttons">Contacts</a> 
+                <a href="" class="nav-buttons">Products</a> 
+            </center>
+        </div>
+        <div class="column padding-top ">
+            <div class="pull-right padding-right">
+                <a href="" class="button-upgrade">Upgrade</a>
+                <a href="" class="nav-buttons">Logout</a>
+            </div>
+        </div>
+   </div>
+</div> 
 
-<h1>This is a heading</h1>
+
+<section class="banner">
+    
+    asdasdasd
+</section>
+
+
+<button class="button btn-primary">Button 1</button>
+<button class="button btn-success">Button 2</button>
+<button class="button btn-danger">Button 3</button>
+<button class="button btn-warning">Button 4</button>
+
+
+
+<h1 id="henne">This is a heading</h1>
 <h2>This is a heading</h2>
 <h3>This is a heading</h3>
 
